# lcpvfxtools

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  batch_raw_to_exr.py  main.py  pyproject.toml  requirements.txt
cc_utils/: __init__.py
config/: __init__.py  _default.py
db_utils/: __init__.py
exif_utils/: __init__.py
hdr_utils/: __init__.py
tests/: __init__.py
tests/data/expected/: IMG_8377_ACEScg.exr  IMG_8377_redistort_map.exr  IMG_8377_st_map_params.txt  IMG_8377_tca_blue.exr  IMG_8377_tca_red.exr  IMG_8377_undistort_map.exr  IMG_8377_vignette_map.exr  IMG_8586_ACEScg.exr  IMG_8586_redistort_map.exr  IMG_8586_st_map_params.txt  IMG_8586_undistort_map.exr  IMG_8586_vignette_map.exr
tests/data/input/: IMG_8377.CR2  IMG_8586.CR2
ui_utils/: __init__.py
