[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lcpvfxtools"
version = "0.1.0"
description = "Camera raw profile selection and correction map generation tools"
authors = [
    { name="Jeremy K. Hardin", email="jeremy@darkcosmoscreative.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "ExifRead==3.3.0",
    "imath==0.0.2",
    "importlib-metadata==6.8.0",
    "numpy==2.2.4",
    "opencv-python==4.11.0.86",
    "OpenEXR==3.3.3",
    "pandas==2.2.3",
    "RapidFuzz==3.13.0",
    "rawpy==0.25.0",
    "wxPython==4.2.3",
    "xmltodict==0.14.2"
]

[tool.setuptools]
packages = ["lcpvfxtools", "lcpvfxtools.config", "lcpvfxtools.cc_utils", "lcpvfxtools.exif_utils", "lcpvfxtools.db_utils", "lcpvfxtools.ui_utils", "tests"]

[tool.setuptools.package-data]
"lcpvfxtools.config" = ["_default.py"]
"tests" = ["data/input/*", "data/expected/*"]
